--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 ###############
 # Build tests
 ###############
+INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
 
 ################
 # Add tests to ctest
@@ -9,6 +10,10 @@
 ADD_EXECUTABLE(redset_test test_redset.c)
 TARGET_LINK_LIBRARIES(redset_test ${SPATH_EXTERNAL_LIBS} redset)
 ADD_TEST(NAME redset_test COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 -N2 ./redset_test)
+
+ADD_EXECUTABLE(test_config test_config.c)
+TARGET_LINK_LIBRARIES(test_config ${SPATH_EXTERNAL_LIBS} redset)
+ADD_TEST(NAME test_config COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 1 ./test_config)
 
 ####################
 # make a verbose "test" target named "check"
